# serializer version: 1
# name: TestDeriveWorkflowStates.test_define_initial_workflows[amplicon]
  dict({
    'aodp': 'none',
    'iimi': 'incompatible',
    'nuvs': 'incompatible',
    'pathoscope': 'incompatible',
  })
# ---
# name: TestDeriveWorkflowStates.test_define_initial_workflows[normal]
  dict({
    'aodp': 'incompatible',
    'iimi': 'none',
    'nuvs': 'none',
    'pathoscope': 'none',
  })
# ---
# name: TestDeriveWorkflowStates.test_define_initial_workflows[other]
  dict({
    'aodp': 'incompatible',
    'iimi': 'none',
    'nuvs': 'none',
    'pathoscope': 'none',
  })
# ---
# name: TestDeriveWorkflowStates.test_define_initial_workflows[srna]
  dict({
    'aodp': 'incompatible',
    'iimi': 'none',
    'nuvs': 'none',
    'pathoscope': 'none',
  })
# ---
# name: test_create_sample
  dict({
    'all_read': True,
    'all_write': False,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'format': 'fastq',
    'group': '',
    'group_read': True,
    'group_write': False,
    'hold': True,
    'host': '',
    'id': 'a2oj3gfd',
    'is_legacy': False,
    'isolate': '',
    'labels': list([
    ]),
    'library_type': '',
    'locale': '',
    'name': 'foo',
    'notes': 'test',
    'nuvs': False,
    'paired': False,
    'pathoscope': False,
    'quality': None,
    'ready': False,
    'subtractions': list([
    ]),
    'user': dict({
      'id': 'bob',
    }),
    'workflows': dict({
      'aodp': 'incompatible',
      'iimi': 'none',
      'nuvs': 'none',
      'pathoscope': 'none',
    }),
  })
# ---
# name: test_create_sample.1
  dict({
    '_id': 'a2oj3gfd',
    'all_read': True,
    'all_write': False,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'format': 'fastq',
    'group': '',
    'group_read': True,
    'group_write': False,
    'hold': True,
    'host': '',
    'is_legacy': False,
    'isolate': '',
    'labels': list([
    ]),
    'library_type': '',
    'locale': '',
    'name': 'foo',
    'notes': 'test',
    'nuvs': False,
    'paired': False,
    'pathoscope': False,
    'quality': None,
    'ready': False,
    'subtractions': list([
    ]),
    'user': dict({
      'id': 'bob',
    }),
    'workflows': dict({
      'aodp': 'incompatible',
      'iimi': 'none',
      'nuvs': 'none',
      'pathoscope': 'none',
    }),
  })
# ---
